--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -41,7 +41,7 @@
                         android:textSize="14sp" />
 
 
-                    <AutoCompleteTextView
+                    <EditText
                         android:id="@+id/et_search"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
