--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -87,12 +87,14 @@
             />
 
         <TextView
+            android:fontFamily="@font/bold"
+            android:visibility="gone"
             android:textStyle="italic"
             android:textColor="@color/black"
             android:id="@+id/no_product"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="No Products Available"
+            android:text="@string/no_product"
             android:layout_gravity="center"
             android:gravity="center"
             android:textAlignment="center"
