--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -73,6 +73,7 @@
         android:background="@color/green"/>
 
             <com.facebook.shimmer.ShimmerFrameLayout
+                android:visibility="gone"
                 android:id="@+id/shimmer_view_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -109,6 +110,21 @@
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:id="@+id/rv_cat"/>
+
+
+            <TextView
+                android:fontFamily="@font/bold"
+                android:textStyle="italic"
+                android:textColor="@color/black"
+                android:id="@+id/no_product"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/no_fav"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textAlignment="center"
+                />
+
 
 
         </LinearLayout>
