--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:shimmer="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -73,14 +74,13 @@
                                 android:id="@+id/rbstore"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/nav_stores"/>
+                                android:text="@string/stores"/>
                             <RadioButton
                                 android:id="@+id/rbprod"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/tv_home_cat"
                                 />
-
 
                         </RadioGroup>
 
@@ -108,6 +108,51 @@
 
             </androidx.cardview.widget.CardView>
 
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/shimmer_store"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                shimmer:duration="500">
+
+                <!-- Adding 7 rows of placeholders -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <include layout="@layout/data_holder1" />
+                    <include layout="@layout/data_holder1" />
+                    <include layout="@layout/data_holder1" />
+
+                </LinearLayout>
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:visibility="gone"
+                android:id="@+id/shimmer_product"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                shimmer:duration="500">
+
+                <!-- Adding 7 rows of placeholders -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <include layout="@layout/data_holder1" />
+                    <include layout="@layout/data_holder1" />
+                    <include layout="@layout/data_holder1" />
+
+                </LinearLayout>
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_search"
                 android:visibility="gone"
@@ -118,6 +163,20 @@
                 android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
+
+            <TextView
+                android:visibility="gone"
+                android:textStyle="italic"
+                android:textColor="@color/black"
+                android:fontFamily="@font/bold"
+                android:id="@+id/no_record"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/no_record"
+                android:gravity="center"
+                android:textAlignment="center"
+                />
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
