--- a/app/src/main/res/drawable-mdpi-v11/bg_rounded_button.xml
+++ b/app/src/main/res/drawable-mdpi-v11/bg_rounded_button.xml
@@ -5,7 +5,7 @@
         android:width="3dp"
         android:color="@color/green" />
     <solid android:color="@color/green" />
-    <stroke
+    <strokeytrewq
         android:width="0dp"
         android:color="@color/green" />
     <padding
