--- a/app/src/main/res/drawable/bac1.xml
+++ b/app/src/main/res/drawable/bac1.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners
-        android:radius="30dp"/>
-    <gradient
-        android:startColor="@color/color1"
-        android:endColor="@color/color2"
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:color="@color/black"
+    tools:targetApi="lollipop"
+    >
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/colorPrimary" />
+            <corners
+                android:radius="30dp"/>
+            <gradient
+                android:startColor="@color/color1"
+                android:endColor="@color/color2"
+                />
 
-        />
+        </shape>
+    </item>
     <!--    <solid android:color="@color/color1"/>-->
-</shape>
+</ripple>
