--- a/app/src/main/res/drawable/b_background.xml
+++ b/app/src/main/res/drawable/b_background.xml
@@ -2,13 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <solid
-        android:color="#ffffff"
+        android:color="@color/white"
         />
     <corners
         android:radius="15dp"
         />
-    <stroke
-        android:color="@color/colorAccent"
-        android:width="2dp"
-        />
+<!--    <stroke-->
+<!--        android:color="@color/colorAccent"-->
+<!--        android:width="2dp"-->
+<!--        />-->
 </shape>
