--- a/app/src/main/res/layout/row_headre_catogaries.xml
+++ b/app/src/main/res/layout/row_headre_catogaries.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
@@ -14,9 +13,9 @@
         android:layout_gravity="center"
         android:layout_margin="10dp"
         app:contentPadding="@dimen/space_7"
-
-        android:elevation="@dimen/space_4">
-
+        app:cardCornerRadius="20dp"
+        app:cardElevation="5dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,13 +24,14 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/service_image"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@drawable/icon"
                 android:layout_gravity="center"
                 android:clickable="true" />
 
             <TextView
+                android:fontFamily="@font/bold"
                 android:id="@+id/service_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
