--- a/app/src/main/res/drawable/bg_rounded_button1.xml
+++ b/app/src/main/res/drawable/bg_rounded_button1.xml
@@ -11,8 +11,7 @@
                 android:bottom="8dp"
                 android:left="12dp"
                 android:right="12dp"
-                android:top="8dp" />
-            <corners android:radius="15dp" />
+                android:top="8dp" />/>
         </shape>
     </item>
 
