--- a/app/src/main/res/layout/fragment_delivery_time.xml
+++ b/app/src/main/res/layout/fragment_delivery_time.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -12,8 +13,8 @@
         android:background="@color/green"
         android:textColor="#fff"
         android:gravity="center_horizontal"
-        android:paddingBottom="@dimen/space_10"
-        android:paddingTop="@dimen/space_10"
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp"
         android:text="@string/tv_del_title"
         android:textSize="@dimen/text_size_normal"
         android:textStyle="bold" />
@@ -34,34 +35,52 @@
                 android:id="@+id/radioLinear"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/xml_box_shadow_bottom"
                 android:orientation="vertical"
                 android:padding="@dimen/space_10">
 
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="@dimen/space_15"
+                    android:layout_marginBottom="20dp"
+                    app:cardElevation="3dp"
+                    app:cardMaxElevation="@dimen/space_10">
                 <Fonts.LatoBLack
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp"
+                    android:paddingLeft="7dp"
                     android:id="@+id/tv_deli_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/space_5"
                     android:background="@drawable/xml_textbox_blue_bg"
                     android:drawableLeft="@drawable/ic_timeslot_07"
                     android:gravity="center_vertical"
                     android:text="@string/tv_del_date"
-                    android:textColor="@color/white"
-                    android:padding="@dimen/space_5"/>
+                    android:drawablePadding="10dp"
+                    android:textColor="@color/white"/>
+                </androidx.cardview.widget.CardView>
 
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="@dimen/space_15"
+                    android:layout_marginBottom="@dimen/space_5"
+                    app:cardElevation="3dp">
                 <Fonts.LatoBLack
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp"
+                    android:paddingLeft="7dp"
                     android:id="@+id/tv_deli_fromtime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/space_5"
                     android:background="@drawable/xml_textbox_blue_bg"
                     android:drawableLeft="@drawable/ic_timeslot_17"
                     android:gravity="center_vertical"
+                    android:drawablePadding="10dp"
                     android:text="@string/tv_del_time"
-                    android:textColor="@color/white"
-                    android:padding="@dimen/space_5"/>
-
+                    android:textColor="@color/white"/>
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
 
             <LinearLayout
@@ -94,21 +113,24 @@
                     <RelativeLayout
                         android:id="@+id/tv_deli_add_address"
                         android:layout_width="wrap_content"
-                        android:layout_height="45dp"
-                        android:layout_margin="12dp"
-                        android:background="@drawable/bg_rounded_button"
-                        android:padding="12dp">
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:layout_marginTop="12dp"
+                        android:layout_marginEnd="12dp"
+                        android:layout_marginBottom="12dp"
+                        android:background="@drawable/bg_rounded_button">
 
                         <Fonts.LatoBLack
                             android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="@string/tv_pro_add"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
                             android:textColor="#fff"
-                            android:textSize="@dimen/text_size_small"/>
-
-
-
+                            android:textSize="14sp" />
 
 
                     </RelativeLayout>
@@ -195,18 +217,17 @@
         <RelativeLayout
             android:id="@+id/btn_deli_checkout"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_margin="12dp"
-            android:background="@drawable/bg_rounded_button"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_rounded_button1"
             android:padding="12dp">
 
             <Fonts.LatoBLack
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/tv_del_continue"
                 android:textColor="#fff"
-                android:textSize="@dimen/text_size_small"/>
+                android:textSize="17dp"/>
 
 
 
