--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -16,46 +16,81 @@
         android:orientation="vertical">
 
 
-        <ImageView
-            android:id="@+id/fav_product"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:padding="3dp"
-            android:visibility="gone"
-            android:src="@drawable/heartf"
-            android:layout_alignParentRight="true"
-            android:layout_margin="15dp"
-            />
 
-        <de.hdodenhof.circleimageview.CircleImageView
+
+        <ImageView
             android:id="@+id/iv_product_detail_img"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/space_12"
             app:srcCompat="@drawable/icon"
-            android:layout_centerHorizontal="true"
-            app:civ_border_color="@android:color/transparent"
-            app:civ_border_width="2dp"/>
+            android:layout_centerHorizontal="true"/>
 
+
+
+
+
+
+<!--        <............................../>-->
         <RelativeLayout
+            android:id="@+id/rl2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/iv_product_detail_img"
+            android:background="@color/green"
+            android:paddingLeft="15dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp">
+            <ImageView
+                android:id="@+id/fav_product"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:padding="3dp"
+                android:src="@drawable/heartf"
+                android:layout_alignParentRight="true"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@id/fav_product"
+                android:weightSum="3">
+            <Fonts.LatoBLack
+                android:id="@+id/tv_product_detail_title"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:paddingRight="10dp"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:maxLines="1"/>
+
+
+            <Fonts.LatoBLack
+                android:id="@+id/tv_subcat_price"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="69 SAR"
+                android:layout_weight="1"
+                android:maxLines="1"
+                android:paddingRight="10dp"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+            </LinearLayout>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_below="@id/rl2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="@dimen/space_10">
 
-            <Fonts.LatoBLack
-                android:id="@+id/tv_product_detail_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_toLeftOf="@+id/linearLayout"
-                android:layout_toStartOf="@+id/linearLayout"
-                android:text="TextView"
-                android:textColor="#000"
-                android:textSize="20sp" />
+
 
             <LinearLayout
                 android:id="@+id/linearLayout"
@@ -119,17 +154,9 @@
                 android:layout_alignParentLeft="true"
                 android:orientation="vertical"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/tv_product_detail_title"
-                android:layout_marginTop="@dimen/space_8"
                 android:layout_toLeftOf="@+id/linearLayout"
                 android:layout_toStartOf="@+id/linearLayout">
-                <Fonts.LatoBLack
-                    android:id="@+id/tv_subcat_price"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:textColor="#000"
-                    android:textSize="@dimen/text_size_X_small" />
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -205,7 +232,8 @@
                 android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/id1">
+                android:layout_below="@id/tv_product_detail"
+                android:layout_marginTop="@dimen/space_10">
                 <Fonts.LatoBLack
                     android:id="@+id/headingrating"
                     android:layout_width="match_parent"
@@ -243,7 +271,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/rl1"
+                android:layout_below="@+id/linearLayout"
                 android:layout_marginTop="@dimen/space_8"
                 android:layout_toLeftOf="@+id/linearLayout"
                 android:layout_toStartOf="@+id/linearLayout"
